# crew_ai-groq_receipt_agent

./: README.md  pyproject.toml
exp/: CrewAIGroq_c.ipynb
src/ai_pdf_total_price_extraction_agent/: crew.py  main.py
src/ai_pdf_total_price_extraction_agent/config/: agents.yaml  tasks.yaml
src/ai_pdf_total_price_extraction_agent/tools/: custom_tool.py
